--- a/app/views/cms_admin/snippets/_form.html.haml
+++ b/app/views/cms_admin/snippets/_form.html.haml
@@ -3,8 +3,7 @@
 
 = form.text_field :label, :data => {:slugify => @snippet.new_record?}
 = form.text_field :identifier, :data => {:slug => true}
-= form.text_area :content, :data => {:cm_mode => 'text/html'}
-
+= form.text_area :content, :data => {:rich_text => true}
 = render :partial => 'cms_admin/categories/form', :object => form
 
 .form-actions
